# fuzzuf-afl-artifact

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release_artifacts.yaml
Algorithms/AFL/: AFLDictData.cpp  AFLFuzzer.cpp  AFLMutationHierarFlowRoutines.cpp  AFLMutator.cpp  AFLOtherHierarFlowRoutines.cpp  AFLSetting.cpp  AFLState.cpp  AFLTestcase.cpp  AFLUpdateHierarFlowRoutines.cpp  AFLUtil.cpp
Algorithms/libFuzzer/: Dictionary.cpp
CLI/: CLIEntrypoint.cpp  CommandLineArgs.cpp  FuzzerBuilderRegister.cpp  ParseGlobalOptionsForFuzzer.cpp
CLI/Fuzzers/AFL/: RegisterAFLFuzzer.cpp
ExecInput/: ExecInput.cpp  ExecInputSet.cpp  OnDiskExecInput.cpp  OnMemoryExecInput.cpp
Executor/: Executor.cpp  NativeLinuxExecutor.cpp  PinToolExecutor.cpp
Feedback/: BorrowedFdFeedback.cpp  DisposableFdFeedback.cpp  ExitStatusFeedback.cpp  FileFeedback.cpp  InplaceMemoryFeedback.cpp  PUTExitReasonType.cpp  PersistentMemoryFeedback.cpp
Include/: Exceptions.hpp  Options.hpp
Include/Algorithms/AFL/: AFLDictData.hpp  AFLFuzzer.hpp  AFLMacro.hpp  AFLMutationHierarFlowRoutines.hpp  AFLMutator.hpp  AFLOtherHierarFlowRoutines.hpp  AFLSetting.hpp  AFLState.hpp  AFLTestcase.hpp  AFLUpdateHierarFlowRoutines.hpp  AFLUtil.hpp  CountClasses.hpp
Include/Algorithms/libFuzzer/: Dictionary.hpp
Include/CLI/: CommandLineArgs.hpp  FuzzerArgs.hpp  FuzzerBuilder.hpp  FuzzerBuilderRegister.hpp  GlobalArgs.hpp  GlobalFuzzerOptions.hpp  ParseGlobalOptionsForFuzzer.hpp  PutArgs.hpp
Include/CLI/Fuzzers/AFL/: BuildAFLFuzzerFromArgs.hpp
Include/CLI/Stub/: AFLFuzzerStub.hpp
Include/ExecInput/: ExecInput.hpp  ExecInputSet.hpp  OnDiskExecInput.hpp  OnMemoryExecInput.hpp
Include/Executor/: Executor.hpp  NativeLinuxExecutor.hpp  PinToolExecutor.hpp
Include/Feedback/: BorrowedFdFeedback.hpp  DisposableFdFeedback.hpp  ExitStatusFeedback.hpp  FileFeedback.hpp  InplaceMemoryFeedback.hpp  PUTExitReasonType.hpp  PersistentMemoryFeedback.hpp
Include/Fuzzer/: Fuzzer.hpp
Include/HierarFlow/: HierarFlowIntermediates.hpp  HierarFlowNode.hpp  HierarFlowRoutine.hpp
Include/Logger/: LogFileLogger.hpp  Logger.hpp  StdoutLogger.hpp
Include/Mutator/: Mutator.hpp
Include/Python/: PyFeedback.hpp  PySeed.hpp  PythonFuzzer.hpp  PythonHierarFlowRoutines.hpp  PythonSetting.hpp  PythonState.hpp  PythonTestcase.hpp
Include/Utils/: AFLDictParser.hpp  CheckCapability.hpp  CheckIfStringIsDecimal.hpp  Common.hpp  EnumCast.hpp  Filesystem.hpp  HexDump.hpp  InterprocessSharedObject.hpp  IsExecutable.hpp  MapFile.hpp  OptParser.hpp  RangeTraits.hpp  RemoveCVR.hpp  SharedRange.hpp  Status.hpp  Which.hpp  Workspace.hpp
Logger/: LogFileLogger.cpp  Logger.cpp  StdoutLogger.cpp
Mutator/: Mutator.cpp
Python/: ExportWyvern.cpp  PyFeedback.cpp  PySeed.cpp  PythonFuzzer.cpp  PythonHierarFlowRoutines.cpp  PythonSetting.cpp  PythonState.cpp  PythonTestcase.cpp
Utils/: Common.cpp  HexDump.cpp  IsExecutable.cpp  MapFile.cpp  Which.cpp  Workspace.cpp
check/: config.h.in  get_pybind11_version.cpp  get_sitedir.cpp  get_sitedir.py  has_bit.cpp  has_filesystem.cpp
cmake/: FindPybind11.cmake  FindPython3x.cmake
jenkins/wyvern-new-branch_build/: Jenkinsfile  build.sh
jenkins/wyvern-new-pr_build_ubuntu1804/: Jenkinsfile  build.sh
jenkins/wyvern-new-pr_build_ubuntu2004/: Jenkinsfile
test/: CMakeLists.txt
test/algorithms/: CMakeLists.txt
test/algorithms/afl/: CMakeLists.txt  dictionary.cpp  diff.sh  loop.cpp  original-afl.patch  run.sh
test/algorithms/libfuzzer/: CMakeLists.txt  dictionary.cpp
test/cli/: CMakeLists.txt  parser.cpp
test/common/: create_file.cpp  create_file.hpp  move_to_program_location.cpp  move_to_program_location.hpp  random_data.cpp  random_data.hpp
test/exec_input/: CMakeLists.txt  exec_input_set.cpp
test/executor/: CMakeLists.txt  abort.cpp  illegal_instruction.cpp  native_linux_run.cpp  never_exit.cpp  pintool_run.cpp  segmentation_fault.cpp
test/executor/intel_pin/: CMakeLists.txt
test/executor/non_fork_server_mode/: CMakeLists.txt  run.cpp
test/fuzzer/: CMakeLists.txt  create.cpp  loop.cpp  multiple_instances.cpp  timeout.cpp
test/instrument/: CMakeLists.txt  cov_afl.cpp  cov_bb.cpp  zeroone.cpp
test/mutator/: CMakeLists.txt  mutator.cpp
test/profile/: add_seed.cpp
test/put_binaries/: CMakeLists.txt  README.md  command_wrapper  command_wrapper.cpp
test/python/fuzzer/: CMakeLists.txt  reset.cpp
test/util/: CMakeLists.txt  count_bits.cpp  count_bytes.cpp  count_non255_bytes.cpp  global_counter.cpp  hash.cpp  locate_diffs.cpp  minimize_bits.cpp  range.cpp  status.cpp  which.cpp
tools/: CMakeLists.txt
tools/dict2mp/: dict2mp.cpp
